--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -29,8 +29,8 @@ mariadb-data:
   - ./volumes/mysql:/var/lib/mysql
   - "/etc/localtime:/etc/localtime:ro"
   command: /bin/true
-postfix:
-   image: juanluisbaptiste/postfix:latest
-   expose:
-   - "25"
-   env_file: ../../../credentials-smtp.env
+# postfix:
+#    image: juanluisbaptiste/postfix:latest
+#    expose:
+#    - "25"
+#    env_file: ../../credentials-smtp.env
